# datafusion-unity-catalog

./: Cargo.toml  README.md
src/: lib.rs
src/catalog/: mod.rs
src/client/: error.rs  mod.rs
src/client/rest/: mod.rs  types.rs
src/table/: mod.rs
src/unity/: catalog.rs  error.rs  mod.rs  schema.rs  unity.rs
src/unity/table/: delta.rs
